Add Github repo in package.json, v0.1.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@tgrospic/rnode-grpc-js",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "RNode gRPC helpers",
+  "repository": "github:tgrospic/rnode-grpc-js",
   "author": "Tomislav Grospic",
   "license": "MIT",
   "main": "dist/cli",
