--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tgrospic/rnode-grpc-js",
-  "version": "0.3.5",
+  "version": "0.4.0",
   "description": "RNode gRPC helpers",
   "repository": "github:tgrospic/rnode-grpc-js",
   "author": "Tomislav Grospic",
@@ -8,6 +8,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist --copy-files",
+    "build:watch": "babel src -d dist --copy-files --watch --verbose",
     "prepublishOnly": "npm-run-all clean build",
     "publish:public": "npm publish --access public",
     "clean": "rimraf dist"
@@ -28,6 +29,7 @@
     "@babel/runtime": "^7.5.5",
     "blakejs": "^1.1.0",
     "core-js": "^3.2.1",
+    "elliptic": "^6.5.0",
     "fs-extra": "^8.1.0",
     "ramda": "^0.26.1",
     "request": "^2.88.0",
