--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tgrospic/rnode-grpc-js",
-  "version": "0.6.5",
+  "version": "0.7.0",
   "description": "RNode gRPC helpers",
   "repository": "github:tgrospic/rnode-grpc-js",
   "author": "Tomislav Grospic",
@@ -33,8 +33,7 @@
     "fs-extra": "^8.1.0",
     "ramda": "^0.26.1",
     "request": "^2.88.0",
-    "stat-mode": "^0.3.0",
-    "which": "^1.3.1"
+    "stat-mode": "^0.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
