Custom protocol generator, pure JS grpc (grpc-js), remove protoc web plugin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tgrospic/rnode-grpc-js",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "RNode gRPC helpers",
   "repository": "github:tgrospic/rnode-grpc-js",
   "author": "Tomislav Grospic",
@@ -32,8 +32,7 @@
     "elliptic": "^6.5.0",
     "fs-extra": "^8.1.0",
     "ramda": "^0.26.1",
-    "request": "^2.88.0",
-    "stat-mode": "^0.3.0"
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
