--- a/package.json
+++ b/package.json
@@ -26,23 +26,25 @@
     "rholang"
   ],
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
+    "@babel/runtime": "^7.8.4",
+    "base-58": "0.0.1",
     "blakejs": "^1.1.0",
-    "core-js": "^3.2.1",
-    "elliptic": "^6.5.0",
+    "core-js": "^3.6.4",
+    "elliptic": "^6.5.2",
     "fs-extra": "^8.1.0",
+    "js-sha3": "^0.8.0",
     "ramda": "^0.26.1",
-    "request": "^2.88.0"
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "grpc-tools": "^1.8.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
+    "grpc-tools": "^1.8.1",
     "npm-run-all": "^4.1.5",
     "protobufjs": "^6.8.8",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.2"
   },
   "peerDependencies": {
     "grpc-tools": "^1.8.0",
