--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "run-p build:es5 build:docs",
     "build:es5": "tsc",
     "build:es5:w": "tsc -w",
-    "build:docs": "typedoc src --tsconfig tsconfig.json --out dist-docs --excludePrivate --excludeProtected",
+    "build:docs": "typedoc src --out dist-docs --excludePrivate --excludeProtected",
     "prepublishOnly": "npm-run-all clean build",
     "publish:public": "npm publish --access public",
     "clean": "rimraf dist dist-module dist-types dist-docs",
