--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/bs58": "^4.0.1",
     "@types/elliptic": "^6.4.14",
+    "@types/fs-extra": "^9.0.13",
     "@types/google-protobuf": "^3.15.5",
     "@types/node": "^16.11.11",
     "@types/ramda": "^0.27.58",
